--- a/src/App.css
+++ b/src/App.css
@@ -192,6 +192,7 @@ width: 0px !important;
 .insurance-policy-image-container{
   width: 30%;
   height: 100%;
+  background-color:whitesmoke !important; 
 }
 
 .insurance-policy-image{
