--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
 .right {
   width: 25%;
   height: 100%;
-  background-color: rgb(53, 71, 137);
+  background-color: rgb(5, 30, 125);
 }
 .MuiStepConnector-lineHorizontal-109 {
   border-top-style: solid;
@@ -245,3 +245,42 @@ width: 0px !important;
 .sidebar-carousel-content{
   padding-bottom:  100%;
 }
+
+/* carousel content */
+
+.carousel-content-heading{
+  font-size: 20px;
+  color: white;
+  font-weight: 400;
+  padding-left: 40px;
+  padding-top: 50px;
+}
+
+.carousel-content-data-container{
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 20px;
+}
+
+.carousel-content-data{
+  font-size: 12px;
+  color: white;
+  padding-bottom: 5px;
+  font-weight: 100;
+}
+
+.carousel-indicators li {
+  opacity: 1;
+  border-radius: 10% !important;
+  width: 100px !important;
+  height: 5px !important;
+ }
+
+ .carousel-indicators{
+   padding-left: 20px;
+  top:600px;
+  width:80% !important;
+  margin-left: 0px !important;
+  display: flex !important;
+  left: 0% !important;
+ }
