--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ width: 0px !important;
   padding-top: 30px !important;
   height: 110px !important;
   background-color: transparent !important;
-  border-bottom: 0.5px solid rgb(179, 173, 173) !important;
+  /* border-bottom: 0.5px solid rgb(179, 173, 173) !important; */
 }
 
 .header {
