--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,6 @@
 }
 
 .left2 {
-  width: 100% !important;
-  height: 47em !important;
   overflow: hidden;
   background-color: transparent !important;
 }
@@ -50,6 +48,7 @@
   width: 25%;
   height: 100%;
   background-color: rgb(5, 30, 125);
+  z-index:10000 !important;
 }
 .MuiStepConnector-lineHorizontal-109 {
   border-top-style: solid;
@@ -182,6 +181,7 @@ width: 0px !important;
   height: 110px !important;
   background-color: transparent !important;
   border-bottom: 0.5px solid rgb(179, 173, 173) !important;
+  width: 100% !important;
 }
 
 .header {
@@ -270,6 +270,7 @@ width: 0px !important;
   font-weight: 400;
   padding-left: 40px;
   padding-top: 50px;
+  border-bottom: 0px !important;
 }
 
 .carousel-content-data-container{
@@ -301,7 +302,6 @@ width: 0px !important;
   left: 0% !important;
  }
 
-<<<<<<< HEAD
  .MuiStepIcon-root-58.MuiStepIcon-active-60{
    color: rgb(149, 209, 48) !important;
    font-size:47px !important;
@@ -362,9 +362,7 @@ width: 0px !important;
 .MuiStepper-horizontal-5 {
   width: 550px !important;
 }
-=======
  .carousel-indicators >li{
    margin-left:22px !important
  }
  
->>>>>>> a49c2f30ad43cfd44987648b4cea7ce87cf68f76
